fix word-wrap

--- a/themes/chocoyomi-block-theme/style.css
+++ b/themes/chocoyomi-block-theme/style.css
@@ -187,6 +187,7 @@ body {
   color: #1d3557;
   font-size: 14px;
   line-height: 16px;
+  word-wrap: break-word;
 }
 
 .wp-post-excerpt {
